--- a/camunda/src/main/templates/services/Process.groovy.template
+++ b/camunda/src/main/templates/services/Process.groovy.template
@@ -1,7 +1,6 @@
 package ${packageName}
 
-import org.camunda.bpm.engine.RuntimeService
-import org.camunda.bpm.engine.runtime.Execution
+import org.camunda.bpm.engine.delegate.DelegateExecution
 
 import java.util.logging.Logger
 
@@ -10,11 +9,9 @@ class ${simpleName}Service {
     // Use java.util.logging in order to see something in vanilla tomcat catalina.out
     static Logger logger = Logger.getLogger(${simpleName}Service.name)
     
-    RuntimeService runtimeService
-
-    def serviceMethod(Execution execution) {
+    def serviceMethod(DelegateExecution execution) {
         println("\${${simpleName}Service.class.simpleName} called from Camunda BPM ProcessInstance (id='\${execution.processInstanceId}').")
-        runtimeService.getVariables(execution.processInstanceId).each {
+        execution.getVariables(execution.processInstanceId).each {
             logger.info("- Process Variable '\${it.key}' = \${it.value} (\${it.value?.class})")
         }
     }
